fix youtube iframe on small screens

--- a/css/blog.scss
+++ b/css/blog.scss
@@ -454,4 +454,5 @@ figcaption {
 .youtube_iframe {
     margin: 0 auto;
     display: block;
+    max-width: 100%;
 }
